syntax = "proto3";
package cores;

option go_package = "github.com/snple/kokomi/pb/cores;cores";

import "generic_message.proto";

message SyncUpdated {
    string id = 1;
    int64 updated = 2;
}

service SyncService {
    rpc SetDeviceUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetDeviceUpdated(pb.Id) returns (SyncUpdated) {}
    rpc WaitDeviceUpdated(pb.Id) returns (stream pb.MyBool) {}
    rpc SetTagValueUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetTagValueUpdated(pb.Id) returns (SyncUpdated) {}
    rpc WaitTagValueUpdated(pb.Id) returns (stream pb.MyBool) {}
    rpc SetWireValueUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetWireValueUpdated(pb.Id) returns (SyncUpdated) {}
    rpc WaitWireValueUpdated(pb.Id) returns (stream pb.MyBool) {}
}

service SyncGlobalService {

}
